--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="Kostenlose Online Gedenk- und Trauerfeiern während der COVID19 Pandemie." />
     <link rel="apple-touch-icon" href="logo192.png" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -32,7 +32,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Virtuelle Trauerfeiern – Funeral Marketplace</title>
+    <title>Online Gedenk- & Trauerfeiern</title>
 </head>
 
 <body class="has-animations">
