added press page with file downloads; added fb & twitter meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,17 @@
     <meta name="description" content="Kostenlose Online Gedenk- und Trauerfeiern während der COVID19 Pandemie." />
     <link rel="apple-touch-icon" href="logo192.png" />
 
+    <meta property="og:title" content="Online Gedenk- & Trauerfeiern">
+    <meta property="og:description" content="Kostenlose Online Gedenk- und Trauerfeiern während der COVID19 Pandemie.">
+    <meta property="og:image" content="https://trauerfeier.online/meta-image.jpg">
+    <meta property="og:url" content="https://trauerfeier.online">
+
+    <meta name="twitter:title" content="Online Gedenk- & Trauerfeiern ">
+    <meta name="twitter:description" content="Kostenlose Online Gedenk- und Trauerfeiern während der COVID19 Pandemie.">
+    <meta name="twitter:image" content="https://trauerfeier.online/meta-image.jpg">
+    <meta name="twitter:card" content="summary_large_image">
+
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-74952067-2"></script>
     <script>
