enable animations only when JS is enabled → disables animations for prerendering

--- a/public/index.html
+++ b/public/index.html
@@ -46,8 +46,7 @@
     <title>Online Gedenk- & Trauerfeiern</title>
 </head>
 
-<body class="has-animations">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+<body>
     <div id="root" class="body-wrap"></div>
 </body>
 
