--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
 </head>
 
 <body>
+  <noscript>You need to enable JavaScript to view this page.</noscript>
     <div id="root" class="body-wrap"></div>
 
     <script>
